<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <ListPreference
        android:key="settings_camera"
        android:title="@string/select_camera" />
    <ListPreference
        android:key="settings_range"
        android:title="@string/fps" />
    <ListPreference
        android:key="settings_size"
        android:title="@string/resolution" />
    <EditTextPreference 
        android:key="settings_quality"
        android:title="@string/quality"
        android:defaultValue="50" />
    <EditTextPreference
        android:key="settings_port"
        android:title="@string/port"
        android:defaultValue="8080" />

    <ListPreference
        android:key="settings_photo_size"
        android:title="@string/photo_resolution" />

    <EditTextPreference
        android:defaultValue="60"
        android:key="settings_photo_frequency"
        android:title="@string/photo_frequency"
        android:inputType="number"       />

    <EditTextPreference
        android:defaultValue="upload.to/webcam/upload.php"
        android:key="settings_photo_url"
        android:title="@string/server_url" />


    <EditTextPreference
        android:defaultValue="50"
        android:key="settings_photo_light_threshold"
        android:title="@string/photo_light_threshold"
        android:inputType="number"       />


</PreferenceScreen>